--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
+title: Reinforcement Learning - Q-Learning
+description: Ashiqur Rahman, Software Technology Lab, Queen's University, Kingston, Canada
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-leap-day
+include:
+  - "_img"
